ros_ws/log/build_2025-07-01_17-16-42/dynamic_obstacle_detector/stderr.log
  File "/root/ros_workspace/install/dynamic_obstacle_detector/lib/python3.12/site-packages/dynamic_obstacle_detector/obstacle_detector_node.py", line 330
    +        
             ^
SyntaxError: invalid syntax

